test/darwin/fail/write05.v3
//@execute = true
component write05 {
	def STDOUT: int = 1;
	def main() -> bool {
		var str = "The quick brown fox jumped over the lazy dog.";
		return doWrite(Darwin.write, str) == str.length;
	}
	def doWrite(f: (int, Pointer, int) -> int, str: string) -> int {
		var buf = Pointer.atContents(str);
		return f(STDOUT, buf, str.length);
	}
}
